[package]
name = "http-ws-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version="0.3" }
tokio = { version="1", features=["rt-multi-thread","macros"] }
#tokio = { version="1", features=["full"] }
hyper={ version="0.14", features=["server","http1","http2","tcp"] }
tungstenite={ version="0.14", default-features=false }
tokio-tungstenite={ version="0.15" }
log={ version="0.4" }
proto_mav= { git="https://github.com/eucleo/proto-mav.git" }
#proto_mav= { path="../proto-mav" }
prost = { version="0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version="1.0" }
